package com.amazon.ata.oop.metrics.reporting;

public interface MetricsReporterFactory {

    MetricsReporter newMetricsReporter();

}
